--- a/Main/src/main/webapp/WEB-INF/web.xml
+++ b/Main/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     </filter>
     <filter-mapping>
         <filter-name>CharacterEncodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/**</url-pattern>
     </filter-mapping>
     <!--请求处理方式过滤器-->
     <filter>
